# fastapi-course

./: README.md  auth.py  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py
router/: posts.py  users.py
sync-fastapi/: app.py  database.py
templates/: home.html  layout.html  user_posts.html
